--- a/src/App.css
+++ b/src/App.css
@@ -86,15 +86,32 @@ main{
     font-size: 1rem;
     font-weight: 600;
 }
+
 .App {
     font-family: sans-serif;
     text-align: center;
   }
   .mcomment {
     
-    width: 70vw;
+    width: 80vw;
+    overflow: scroll;
+    height: 90vh;
+    overflow-x: auto;
+    overflow-y: auto;
    
     
+  }
+  .mcomment::-webkit-scrollbar {
+    width: 0.2em;
+  }
+   
+  .mcomment::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px red;
+  }
+   
+  .mcomment::-webkit-scrollbar-thumb {
+    background-color: white;
+    outline: 1px solid black;
   }
   .mbottom {
     display: flex;
@@ -177,6 +194,7 @@ main{
     background: #242731;
     display: flex;
     height: 18vh;
+    width: auto;
     flex-direction: column;
     box-sizing: border-box;
     padding: 0.54rem;
@@ -185,6 +203,13 @@ main{
     color: white;
     font-weight: 700;
     border-radius: 0.5rem;
+  }
+  .hsection{
+    width: auto;
+  }
+  .hsection input{
+    width: 80%;
+    background: yellow;
   }
   .todolist input{
     background: #242731;
@@ -240,4 +265,61 @@ main{
     font-weight: 700;
     border-radius: 0.5rem;
   }
-  
+@media screen  and (max-width:500px){
+  .hsection{
+    width: 100%;
+   align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
+  .hsection input{
+    width: 80%;
+   
+  }
+ 
+    .bottombtn{
+      width: 80%;
+      height: 20%;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+     margin: 0 auto;
+     color:#353945;
+     
+    }
+    .btn{
+      display: none;
+    }
+    .mode{
+      display: flex;
+      width: 45%;
+      justify-content: space-between;
+      flex-direction: column;
+    }
+    .top_section{
+      display: none;
+    }
+    .screenmode{
+    
+      background-color: black;
+     
+      font-size: 5%;
+    }
+  .sidebar{
+    background: black;
+    width: 20%;
+  }
+  .sidedrawer{
+    width: 20%;
+  }
+  .link_text{
+    display: none;
+    
+}
+.link_text p{
+  display: none;
+}
+.container{
+  margin: 0 auto;
+}
+}  
